add new header top section html and css

--- a/index.html
+++ b/index.html
@@ -5,8 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coffe Roasters || Web Site</title>
+    <link rel="shortcut icon" href="./images/png/Combined Shape.png" type="image/x-icon">
+    <!-- CSS STYLES -->
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-    
+    <!-- HEADER STYLES -->
+    <header class="header">
+
+        <!-- HEADER TOP -->
+        <div class="header-top">
+            <div class="container header-top__container">
+                <a class="site-logo" href="./index.html">
+                    <img class="site-logo__img" src="./images/svg/site-logo.svg" alt="site logo" width="235" height="24">
+                </a>
+                <nav class="sitenav">
+                    <ul class="sitenav__list">
+                        <li class="sitenav__item">
+                            <a href="./index.html" class="sitenav__link">HOME</a>
+                        </li>
+                        <li class="sitenav__item">
+                            <a href="./index.html" class="sitenav__link">ABOUT US</a>
+                        </li>
+                        <li class="sitenav__item">
+                            <a href="./index.html" class="sitenav__link">Create your plan</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+        <!-- HEADER TOP END -->
+
+    </header>
+    <!-- HEADER STYLES END -->
 </body>
 </html>
