--- a/index.html
+++ b/index.html
@@ -54,5 +54,57 @@
     </header>
 
     <!-- HEADER STYLES END -->
+
+    <!-- MAIN STYLES -->
+    <main class="main">
+<!-- COLLECTION -->
+        <div class="collection">
+            <div class="container">
+                <div class="collection__inner">
+                    <h2 class="section-title collection__title">our collection</h2>
+                        <ul class="collection__list">
+                            <!-- COLLECTION ITEM 1 -->
+                            <li class="collection__item">
+                                <img class="collection__item-img" src="./images/png/danche.png" alt="danche img" srcset="./images/png/danche.png 1x, ./images/png/danche@2x.png 2x" width="450" height="375">
+                                <div class="collection__item-text-wrapper">
+                                    <h3 class="collection__item-title">Danche</h3>
+                                    <p class="collection__item-text">Ethiopian hand-harvested blend densely packed with vibrant fruit notes.</p>
+                                </div>
+                            </li>
+                            <!-- COLLECTION ITEM 2 -->
+                            <li class="collection__item">
+                                <img class="collection__item-img" src="./images/png/gran-espresso.png" alt="espresso img" srcset="./images/png/gran-espresso.png 1x, ./images/png/gran-espresso@2x.png 2x" width="450" height="375">
+                                <div class="collection__item-text-wrapper">
+                                    <h3 class="collection__item-title">Gran Espresso</h3>
+                                    <p class="collection__item-text">Light and flavorful blend with cocoa and black pepper for an intense experience.</p>
+                                </div>
+                            </li>
+                            <!-- COLLECTION ITEM 3 -->
+                            <li class="collection__item">
+                                <img class="collection__item-img" src="./images/png/piccollo.png" alt="piccollo img" srcset="./images/png/piccollo.png 1x, ./images/png/piccollo@2x.png 2x" width="450" height="375">
+                                <div class="collection__item-text-wrapper">
+                                    <h3 class="collection__item-title">Piccollo</h3>
+                                    <p class="collection__item-text">Mild and smooth blend featuring notes of toasted almond and dried cherry.</p>
+                                </div>
+                            </li>
+                            <!-- COLLECTION ITEM 4 -->
+                            <li class="collection__item">
+                                <img class="collection__item-img" src="./images/png/plan-alto.png" alt="plan-alto img" srcset="./images/png/plan-alto.png 1x, ./images/png/plan-alto@2x.png 2x" width="450" height="375">
+                                <div class="collection__item-text-wrapper">
+                                    <h3 class="collection__item-title">Planalto</h3>
+                                    <p class="collection__item-text">Brazilian dark roast with rich and velvety body, and hints of fruits and nuts.</p>
+                                </div>
+                            </li>
+                        </ul>
+                        <img class="collection__left-leaf" src="./images/png/left-leaf.png" alt="left leaf" width="402" height="300">
+                        <img class="collection__left-lite-leaf" src="./images/png/left-lite-leaf.png" alt="left lite leaf" width="316" height="269">
+                        <img class="collection__right-leaf" src="./images/png/right-leaf.png" alt="right leaf" width="392" height="477">
+                        <img class="collection__right-lite-leaf" src="./images/png/right-lite-leaf.png" alt="right light leaf" width="253" height="215">
+                </div>
+            </div>
+        </div>
+<!-- COLLECTION END -->
+    </main>
+    <!-- MAIN STYLES END -->
 </body>
 </html>
