--- a/index.html
+++ b/index.html
@@ -104,6 +104,44 @@
             </div>
         </div>
 <!-- COLLECTION END -->
+
+<!-- CHOOSE STYLES -->
+<div class="choose">
+    <div class="container">
+        <div class="choose__inner">
+            <h2 class="section-title choose__title">Why choose us?</h2>
+            <p class="choose__text">A large part of our role is choosing which particular coffees will be featured 
+                in our range. This means working closely with the best coffee growers to give 
+                you a more impactful experience on every level.</p>
+                <ul class="choose__list">
+                    <li class="choose__item">
+                        <div class="choose__item-img-wrapper">
+                            <img class="choose__item-img" src="./images/jpg/quality-img.jpg" srcset="./images/jpg/quality-img.jpg 1x, ./images/jpg/quality-img@2x.jpg 2x" alt="quality img" width="433" height="500">
+                        </div>
+                        <h3 class="choose__item-title">Best Quality</h3>
+                        <p class="choose__item-text">Discover an endless variety of the world’s best artisan coffee from each of our roasters.</p>
+                    </li>
+                    <li class="choose__item">
+                        <div class="choose__item-img-wrapper">
+                            <img class="choose__item-img" src="./images/jpg/benefits-img.jpg" srcset="./images/jpg/benefits-img.jpg 1x, ./images/jpg/benefits-img@2x.jpg 2x" alt="benefits img" width="433" height="500">
+                        </div>
+                        <h3 class="choose__item-title">Exclusive benefits</h3>
+                        <p class="choose__item-text">Special offers and swag when you subscribe, including 30% off your first shipment.</p>
+                    </li>
+                    <li class="choose__item">
+                        <div class="choose__item-img-wrapper">
+                            <img class="choose__item-img" src="./images/jpg/shipping-img.jpg" srcset="./images/jpg/shipping-img.jpg 1x, ./images/jpg/shipping-img@2x.jpg 2x" alt="shipping img" width="433" height="500">
+                        </div>
+                        <h3 class="choose__item-title">Free shipping</h3>
+                        <p class="choose__item-text">We cover the cost and coffee is delivered fast. Peak freshness: guaranteed.</p>
+                    </li>
+                    <img class="choose__icon" src="./images/svg/choose-icon.svg" alt="words icon" width="140" height="144">
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- CHOOSE STYLES END -->
     </main>
     <!-- MAIN STYLES END -->
 </body>
