--- a/index.html
+++ b/index.html
@@ -142,6 +142,48 @@
     </div>
 </div>
 <!-- CHOOSE STYLES END -->
+<!-- FEATURES STYLES -->
+<div class="features">
+    <div class="container">
+        <div class="features__inner">
+            <h2 class="features__title section-title">How it works</h2>
+                <ul class="features__list">
+                    <hr class="features__hr">
+                <!-- FEATURES ITEM 1 -->
+                <li class="features__item">
+                    <span class="features__item-box"></span>
+                    <div class="features__item-content">
+                        <h2 class="features__item-number">01</h2>
+                        <h2 class="features__item-title">Pick your coffee</h2>
+                        <p class="features__item-text">Select from our evolving range of artisan coffees. Our beans are ethically sourced and we pay fair prices for them. There are new coffees in all profiles every month for you to try out.</p>
+                    </div>
+                </li>
+                <!-- FEATURES ITEM 2 -->
+                <li class="features__item">
+                    <span class="features__item-box"></span>
+                    <div class="features__item-content">
+                        <h2 class="features__item-number">02</h2>
+                        <h2 class="features__item-title">Choose the frequency</h2>
+                        <p class="features__item-text">Customize your order frequency, quantity, even your roast style and grind type. Pause, skip or cancel your subscription with no commitment through our online portal.</p>
+                    </div>
+                </li>
+                <!-- FEATURES ITEM 3 -->
+                <li class="features__item">
+                    <span class="features__item-box"></span>
+                    <div class="features__item-content">
+                        <h2 class="features__item-number">03</h2>
+                        <h2 class="features__item-title">Receive and enjoy!</h2>
+                        <p class="features__item-text">We ship your package within 48 hours, freshly roasted. Sit back and enjoy award-winning world-class coffees curated to provide a distinct tasting experience.</p>
+                    </div>
+                </li>
+            </ul>
+            <a class="features__btn secondary-btn" href="#">Create your plan</a>
+            <img class="features__icon" src="./images/svg/features-icon.svg" alt="ball words" width="227" height="192">
+        </div>
+    </div>
+</div>
+<!-- FEATURES STYLES END -->
+<!-- FEATURES STYLES -->
     </main>
     <!-- MAIN STYLES END -->
 </body>
