add footer styles html and css

--- a/index.html
+++ b/index.html
@@ -186,5 +186,44 @@
 <!-- FEATURES STYLES -->
     </main>
     <!-- MAIN STYLES END -->
+    <!-- FOOTER STYLES -->
+    <footer class="footer">
+        <div class="container footer__container">
+            <a class="footer-logo" href="./index.html">
+                <img class="footer__logo-img" src="./images/svg/site-logo.svg" alt="site logo" width="235" height="24">
+            </a>
+            <nav class="sitenav">
+                <ul class="sitenav__list">
+                    <li class="sitenav__item">
+                        <a href="./index.html" class="sitenav__link">HOME</a>
+                    </li>
+                    <li class="sitenav__item">
+                        <a href="./index.html" class="sitenav__link">ABOUT US</a>
+                    </li>
+                    <li class="sitenav__item">
+                        <a href="./index.html" class="sitenav__link">Create your plan</a>
+                    </li>
+                </ul>
+            </nav>
+            <ul class="footer__social-media">
+                <li class="footer__social-media-item">
+                    <a class="footer__social-media-link" href="#">
+                        <img class="footer__social-media-img" src="./images/svg/facebook-icon.svg" alt="facebook icon" width="30" height="30">
+                    </a>
+                </li>
+                <li class="footer__social-media-item">
+                    <a class="footer__social-media-link" href="#">
+                        <img class="footer__social-media-img" src="./images/svg/twitter-icon.svg" alt="twitter icon" width="30" height="30">
+                    </a>
+                </li>
+                <li class="footer__social-media-item">
+                    <a class="footer__social-media-link" href="#">
+                        <img class="footer__social-media-img" src="./images/svg/instagram-icon.svg" alt="instagram icon" width="30" height="30">
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </footer>
+    <!-- FOOTER STYLES END -->
 </body>
 </html>
