--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- CSS STYLES -->
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./about.html">
 </head>
 <body>
     <!-- HEADER STYLES -->
